[package]
name = "matching-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres"] }